# hammy

./: .env.example  .gitignore  .hammyignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.hammy/: index.json
config/: agents.yaml  hammy.yaml  tasks.yaml
src/hammy/: __init__.py  cli.py  config.py  ignore.py  watcher.py
src/hammy/agents/: explorer.py  historian.py
src/hammy/core/: context_pack.py  crew.py
src/hammy/exporters/: redis_export.py  redis_meta.py
src/hammy/indexer/: __init__.py  code_indexer.py  commit_indexer.py  enricher.py  file_walker.py  index_cache.py
src/hammy/mcp/: server.py
src/hammy/schema/: __init__.py  models.py
src/hammy/tools/: ast_tools.py  bridge.py  diff_analysis.py  hotspot.py  hybrid_search.py  parser.py  qdrant_tools.py  vcs.py
src/hammy/tools/languages/: __init__.py  csharp.py  go.py  helpers.py  javascript.py  php.py  python.py  typescript.py
src/hammy/viz/: __init__.py  server.py
src/hammy/viz/static/: index.html
tests/: test_agents.py  test_cli.py  test_enricher.py  test_file_walker.py  test_hybrid_search.py  test_ignore.py  test_index_cache.py  test_indexer.py  test_mcp.py  test_parser.py  test_redis_export.py  test_redis_meta.py  test_schema.py  test_vcs.py  test_watcher.py
tests/fixtures/sample_csharp/: PaymentController.cs
tests/fixtures/sample_go/: main.go
tests/fixtures/sample_js/: UserComponent.jsx  api.js  commonjs.js
tests/fixtures/sample_php/: UserController.php  UserRepository.php
tests/fixtures/sample_python/: app.py  models.py
tests/fixtures/sample_typescript/: app.ts
