[project]
name = "hammy"
version = "0.1.0"
description = "Codebase Intelligence Engine — deep structural and historical context for AI coding agents"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Agent orchestration
    "crewai[anthropic]>=1.9.0",
    # Tree-sitter parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    # VCS
    "gitpython>=3.1.0",
    "python-hglib>=2.6.0",
    # Vector database
    "qdrant-client>=1.9.0",
    # Ignore system
    "pathspec>=0.12.0",
    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0",
    # MCP server (Phase 7)
    "mcp>=1.0.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    # Hybrid search
    "rank-bm25>=0.2.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "python-dotenv>=1.1.1",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]

[project.scripts]
hammy = "hammy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hammy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
